nats-micro/tests/ui/v2_extra_subject_argument.stderr
error: subject arguments are inferred by matching their name to a `{placeholder}`
 --> tests/ui/v2_extra_subject_argument.rs:6:27
  |
6 |     async fn get(user_id: SubjectParam<u64>) {
  |                           ^^^^^^^^^^^^^^^^^

warning: unused import: `SubjectParam`
 --> tests/ui/v2_extra_subject_argument.rs:1:18
  |
1 | use nats_micro::{SubjectParam, service};
  |                  ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
